fix imports list

--- a/internal/command/interface_creator/file.tmpl
+++ b/internal/command/interface_creator/file.tmpl
@@ -9,7 +9,7 @@ import(
 )
 
 {{ range .interfaces }}
-{{- if .Comment}} /* {{ .Comment  }} */ {{- end}}
+{{ if .Comment}} /* {{ .Comment  }} */ {{ end}}
 type {{.Name}} interface{
 {{- range .Methods }}
     {{- if .Comment}}
