fix imports in generated code

--- a/internal/command/object_test_wrapper/file.tmpl
+++ b/internal/command/object_test_wrapper/file.tmpl
@@ -65,8 +65,8 @@ func (b *{{.objectSpec.Name}}Builder) SetBase(val {{ .objectSpec.BaseObjectTypeN
     return b
 }
 
-// GetWrapper return wrapper object
-func (b *{{.objectSpec.Name}}Builder) GetWrapper() *{{.objectSpec.Name}}{
+// Build return wrapper object
+func (b *{{.objectSpec.Name}}Builder) Build() *{{.objectSpec.Name}}{
     return &b.object
 }
 
